--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "matplotlib>=3.10.7",
+    "notebook>=7.5.0",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "ruff>=0.14.5",
